@@ -3,6 +3,8 @@
 
                 Version 0.6-trunk
 
+# (r1570)
+ * Command 'list' 'sort_comment' to sort file list according to 'i:_comment' value.
 # (r1564)
  * Added an --verbose-font-load switch to set _fbfont_verbosity=1.
 # (r1563)
